--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,13 @@ dependencies:
   simple_animations: ^3.1.1
   rounded_loading_button: ^2.0.5
   animated_text_kit: ^4.2.1
+  marquee: ^2.2.0
+  dash_chat: ^1.1.16
+  flutter_chat_ui: ^1.3.3
+  file_picker: ^4.0.1
+  image_picker: ^0.8.4
+  open_file: ^3.2.1
+  mime: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +57,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/splash_screen.png
+    - assets/images/pp.jpg
+    - assets/messages.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
